# DemandGet

./: .gitignore  README.md  SOP.md  temp_run_pipeline.py  temp_run_pipeline_2.py  temp_run_pipeline_3.py
code/: .env.example  config.example.yaml  config.yaml  requirements.txt  run_pipeline.py
prompts/: validation_kit.md
saas-service/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  pyproject.toml
saas-service/app/: config.py  database.py  main.py
saas-service/app/api/: deps.py
saas-service/app/api/routers/: __init__.py  auth.py  configs.py  experiments.py  pipelines.py  reports.py  signals.py  tenants.py  users.py
saas-service/app/models/: __init__.py  experiment.py  member.py  pipeline.py  signal.py  tenant.py  user.py
saas-service/app/schemas/: __init__.py
saas-service/app/services/: __init__.py  pipeline_runner.py  report_generator.py
saas-service/app/services/extractors/: __init__.py  llm_client.py  signal_extractor.py
saas-service/app/services/fetchers/: __init__.py  base.py  ddg.py  hn.py  reddit.py  stackexchange.py
saas-service/app/services/scorers/: __init__.py  clusterer.py  ranker.py
saas-service/app/services/storers/: __init__.py  cluster_store.py  signal_store.py
saas-service/app/workers/: celery_app.py
saas-service/migrations/: env.py
saas-service/scripts/: check_imports.sh  seed_demo_data.py  test_api.sh  test_startup.py
saas-service/tests/: test_imports.py  test_models.py  test_schemas.py
